RESOLVED FIXED267342
[WGSL] shader,execution,expression,call,builtin,reflect:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267342
Summary [WGSL] shader,execution,expression,call,builtin,reflect:* is failing
Tadeu Zagallo
Reported 2024-01-10 07:39:32 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-10 07:39:55 PST
Tadeu Zagallo
Comment 2 2024-01-10 07:41:40 PST
EWS
Comment 3 2024-01-11 00:47:45 PST
Committed 272901@main (9939b7d727fe): <https://commits.webkit.org/272901@main> Reviewed commits have been landed. Closing PR #22592 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.