[WGSL] shader,execution,expression,call,builtin,reflect:* is failing https://bugs.webkit.org/show_bug.cgi?id=267342 rdar://120784326

Reviewed by Mike Wyrzykowski.

There was a typo where the incorrect operand was used, which caused some of the
intermediate computations to be discarded.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):

Canonical link: https://commits.webkit.org/272901@main